--- a/caretOnIrisData.Rmd
+++ b/caretOnIrisData.Rmd
@@ -9,7 +9,7 @@ In this Markdown document, I show how to run multiple machine learning methods o
 
 Before you do anything else, make sure that you have the following packages installed:
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(caret)
 library(dplyr)
 ```
@@ -33,7 +33,7 @@ iris2 <- iris %>% filter(Species %in% c("versicolor", "virginica")) %>% mutate(S
 summary(iris2)
 ```
 
-Here we subset the data by building a training set to train our learner, and holding out part of the data to assess the performance on the dataset. Note that you won't have to do this on the Breast Cancer Dataset, since we've already separated the two out.
+Here we subset the data by building a training set to train our learner, and holding out part of the  data to assess the performance on the dataset. Note that you won't have to do this on the cvdDataset, since we've already separated the two out.
 
 ```{r}
 dataSize <- nrow(iris2)
