--- a/caretOnIrisData.Rmd
+++ b/caretOnIrisData.Rmd
@@ -12,6 +12,8 @@ Before you do anything else, make sure that you have the following packages inst
 ```{r warning=FALSE, message=FALSE}
 library(caret)
 library(dplyr)
+library(data.table)
+library(dtplyr)
 library(rpart)
 library(party)
 library(e1071)
