--- a/caretOnIrisData.Rmd
+++ b/caretOnIrisData.Rmd
@@ -84,7 +84,7 @@ I'll show how to use three modeling methods here.
 
 ```{r}
 #our straw man: logistic regression
-logitIris <- train(Species ~ Sepal.Width + Petal.Width, method="glm", family="binomial",
+logitIris <- train(Species ~ Sepal.Width + Petal.Width + Sepal.Length, method="glm", family="binomial",
                    data=trainData)
 
 #train linear discriminant analysis method
@@ -109,7 +109,7 @@ classPredLDA <- predict(ldaIris, newdata=testData)
 data.frame(classPredLDA, truth=testData$Species)
 
 #calculate confusion Matrix and other measures of accuracy
-confMatLDA <- confusionMatrix(testData$Species, classPredLDA, positive = "Y")
+confMatLDA <- confusionMatrix(testData$Species, classPredLDA)
 
 #Show everything from `confusionMatrix`
 confMatLDA
@@ -142,9 +142,8 @@ data.frame(truth=testData$Species,logit=classPredLogit, LDA=classPredLDA, CART=c
 Here we compare the accuracies of our models.
 
 ```{r}
-confMatCart <- confusionMatrix(classPredCart, testData$Species, positive = "Y")
-confMatLogit <- confusionMatrix(classPredLogit, testData$Species, positive = "Y")
-confMatCtree <- confusionMatrix(classPredCtree, testData$Species, positive = "Y")
+confMatCart <- confusionMatrix(classPredCart, testData$Species)
+confMatLogit <- confusionMatrix(classPredLogit, testData$Species)
 
 accuracyComparison = rbind(logit = confMatLogit$overall,
                        LDA = confMatLDA$overall,
